# openhands-symphony

./: .gitignore  README.md  install.sh  pyproject.toml  versions.env
docs/: architecture.md  browser.md  canvas.md  capability-spike.md  configuration.md  decisions.md  github-contract.md  installation.md  providers.md  recovery.md  security.md  smoke-test.md  sources.md  state-machine.md
docs/evidence/: browser-capability-spike.json  openhands-capability-spike.json
examples/: config.toml
packaging/: openhands-symphony-chromium.apparmor  openhands-symphony-validator.sudoers  openhands-symphony.nft
scripts/: antigravity_acp_bridge.py  claude_acp_wrapper.sh  codex_acp_wrapper.sh  expire_smoke_lease.py  fake_acp_agent.py  install_platform.sh  launch_headless_browser.sh  openhands_capability_spike.py  prepare_smoke_repositories.sh  run_smoke_test.sh  send_duplicate_webhook.py
smoke/fixture/: AGENTS.md  README.md  calculator.py
src/symphony/: __init__.py  cli.py  config.py  coordinator.py  doctor.py  github.py  intake.py  (+11 more)
systemd/: openhands-agent-dbus.service  openhands-agent-keyring.service  openhands-browser.service  openhands-canvas.service  openhands-symphony-firewall.service  openhands-symphony-reconcile.service  openhands-symphony-reconcile.timer  openhands-symphony.service  openhands-symphony.target
tests/: conftest.py  test_antigravity_bridge.py  test_cli.py  test_config.py  test_doctor.py  test_github.py  test_install_platform.py  test_openhands_provider.py  test_orchestrator.py  test_reports.py  test_store.py  test_webhook.py  test_workspace.py
(+5 files in other folders)
