[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "openhands-symphony"
version = "0.1.0"
description = "A durable GitHub issue-to-PR companion orchestrator for OpenHands Agent Canvas"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
test = [
  "agent-client-protocol==0.11.0",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
agentctl = "symphony.cli:main"
openhands-symphony = "symphony.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/symphony"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
